# ChronoGlass

./: .gitignore  API.md  LICENSE  README.md  metadata.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.html  index.tsx  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  lib.rs  main.rs
src/components/: GlassCard.tsx  GlassCardOverflow.tsx  Icons.tsx
src/services/: storage.ts
